# src/swagger/swagger.yaml
@@ -42,14 +42,14 @@ paths:
           required: true
           description: "Id of user."
           x-example: "5a62be07d6f33400146c9b61"
-        - $ref: '#/parameters/fieldsParam'
-        - $ref: '#/parameters/offsetParam'
-        - $ref: '#/parameters/limitParam'
-        - $ref: '#/parameters/sortParam'
-        - $ref: '#/parameters/filterParam'
-        - $ref: '#/parameters/dateStartParam'
-        - $ref: '#/parameters/dateEndParam'
-        - $ref: '#/parameters/periodParam'   
+        # - $ref: '#/parameters/fieldsParam'
+        # - $ref: '#/parameters/offsetParam'
+        # - $ref: '#/parameters/limitParam'
+        # - $ref: '#/parameters/sortParam'
+        # - $ref: '#/parameters/filterParam'
+        # - $ref: '#/parameters/dateStartParam'
+        # - $ref: '#/parameters/dateEndParam'
+        # - $ref: '#/parameters/periodParam'
       responses:
         200:
           description: "Successful requisition."
@@ -246,11 +246,10 @@ definitions:
     - user_id
     - name
     - start_time
-    - end_time
     - duration
     - intensity_level
-    - distance
     - calories
+    - heartrate
     - steps
     properties:
       id:
@@ -297,15 +296,15 @@ definitions:
         type: integer
         description: "Calories spent during activity."
         example: 123
+      heartrate:
+        type: integer
+        description: "Average heart rate during activity."
+        example: 120
       steps: 
         type: integer
         description: "Number of steps taken during the activity."
         example: 1701
-      create_at:
-        type: string
-        format: date-time
-        description: "Data e hora no padrão UTC gerada automaticamente no momento em que o recurso é salvo no servidor."
-        readOnly: true 
+        
         
   # Definição do schema de erro padrão para as respostas das requisições
   Error:
@@ -326,77 +325,77 @@ definitions:
         type: string
         description: "Detailed description of the error."
         
-parameters:
+# parameters:
 
-  # Respostas Parciais
-  fieldsParam:
-    in: query
-    name: fields
-    required: false
-    type: array
-    items:
-      type: string
-    description: "Allows you to retrieve only the information you want. To do this, simply provide the name of the attributes separated by commas, for example: **_fields = field1, field2** indicates that only field1 and field2 should be listed in the query result."
+#   # Respostas Parciais
+#   fieldsParam:
+#     in: query
+#     name: fields
+#     required: false
+#     type: array
+#     items:
+#       type: string
+#     description: "Allows you to retrieve only the information you want. To do this, simply provide the name of the attributes separated by commas, for example: **_fields = field1, field2** indicates that only field1 and field2 should be listed in the query result."
     
-  # Paginação
-  offsetParam:
-    in: query
-    name: offset
-    type: integer
-    format: int32
-    required: false
-    minimum: 0
-    default: 0
-    description: "The number of items to skip before you start collecting the result set."
+#   # Paginação
+#   offsetParam:
+#     in: query
+#     name: offset
+#     type: integer
+#     format: int32
+#     required: false
+#     minimum: 0
+#     default: 0
+#     description: "The number of items to skip before you start collecting the result set."
     
-  limitParam:
-    in: query
-    name: limit
-    type: integer
-    format: int32
-    required: false
-    maximum: 100
-    default: 20
-    description: "The number of items to return."
+#   limitParam:
+#     in: query
+#     name: limit
+#     type: integer
+#     format: int32
+#     required: false
+#     maximum: 100
+#     default: 20
+#     description: "The number of items to return."
   
-  # Ordenação
-  sortParam:
-    in: query
-    name: sort
-    required: false
-    type: array
-    items:
-      type: string
-    default: ["created_at"]
-    description: "Contains the names of the comma-separated attributes that will be used to sort the result of the query. For ascending use before the attribute name the + character and for descending use the - character. By default the order is ascending, so the + symbol is optional, just inform the attribute."
+#   # Ordenação
+#   sortParam:
+#     in: query
+#     name: sort
+#     required: false
+#     type: array
+#     items:
+#       type: string
+#     default: ["created_at"]
+#     description: "Contains the names of the comma-separated attributes that will be used to sort the result of the query. For ascending use before the attribute name the + character and for descending use the - character. By default the order is ascending, so the + symbol is optional, just inform the attribute."
   
-  # Filtragem
-  filterParam:
-    in: query
-    name: "{fieldName}"
-    required: false
-    type: string
-    description: "**{fieldName}** - _Attribute of the resource you want to apply filtering._\nTo filter a collection by multiple attributes at the same time or filter multiple values for an attribute, simply use the attribute / property name with an equal sign and the expected values, separated by commas **_property=value1,value2,value3_**. The query is not case sensitive. For filtering with logical operators just follow the syntax **_property=operator:value_**. The available operators are:\n - **gt** -> Defines which value of the attribute is greater than (that is,>) the specified value.\n - **gte** -> Defines which attribute value is greater than or equal to (that is,> =) the specified value.\n - **lt** -> Sets the value of the attribute to be less than (that is, <) the specified value.\n - **lte** -> Defines which value of the attribute is less than or equal to (that is, <=) the specified value.\n"
+#   # Filtragem
+#   filterParam:
+#     in: query
+#     name: "{fieldName}"
+#     required: false
+#     type: string
+#     description: "**{fieldName}** - _Attribute of the resource you want to apply filtering._\nTo filter a collection by multiple attributes at the same time or filter multiple values for an attribute, simply use the attribute / property name with an equal sign and the expected values, separated by commas **_property=value1,value2,value3_**. The query is not case sensitive. For filtering with logical operators just follow the syntax **_property=operator:value_**. The available operators are:\n - **gt** -> Defines which value of the attribute is greater than (that is,>) the specified value.\n - **gte** -> Defines which attribute value is greater than or equal to (that is,> =) the specified value.\n - **lt** -> Sets the value of the attribute to be less than (that is, <) the specified value.\n - **lte** -> Defines which value of the attribute is less than or equal to (that is, <=) the specified value.\n"
     
-  # Data
-  dateStartParam:
-    in: query
-    name: date_start
-    required: false
-    type: string
-    description: "Define start date in the format: YYYY-MM-DD or YYYY-MM-DD hh: mm: ss. The attribute used for the query will be the registration_date."
+#   # Data
+#   dateStartParam:
+#     in: query
+#     name: date_start
+#     required: false
+#     type: string
+#     description: "Define start date in the format: YYYY-MM-DD or YYYY-MM-DD hh: mm: ss. The attribute used for the query will be the registration_date."
   
-  dateEndParam:
-    in: query
-    name: date_end
-    required: false
-    type: string
-    description: "Define the end date in the format: YYYY-MM-DD or YYYY-MM-DD hh: mm: ss. The attribute used for the query will be the registration_date."
-    default: "today"
+#   dateEndParam:
+#     in: query
+#     name: date_end
+#     required: false
+#     type: string
+#     description: "Define the end date in the format: YYYY-MM-DD or YYYY-MM-DD hh: mm: ss. The attribute used for the query will be the registration_date."
+#     default: "today"
     
-  periodParam:
-    in: query
-    name: period
-    required: false
-    type: string
-    description: "Sets the period from the available:\n - **[1..n]d** - Total days (1d, 2d, ...)\n - **[1..n]w** - Total weeks (1w, 2w, ...)\n - **[1..n]m** - Total months (1m, 2m, ...)\n - **[1..n]y** - Total years (1y, 2y, ...)\n\nThe attribute used for the query will be the registration_date."
+#   periodParam:
+#     in: query
+#     name: period
+#     required: false
+#     type: string
+#     description: "Sets the period from the available:\n - **[1..n]d** - Total days (1d, 2d, ...)\n - **[1..n]w** - Total weeks (1w, 2w, ...)\n - **[1..n]m** - Total months (1m, 2m, ...)\n - **[1..n]y** - Total years (1y, 2y, ...)\n\nThe attribute used for the query will be the registration_date."
